# Efficient-MoonrAIders

./: README.md  convert_rosbags.py  covariance_experiment.py  make_efficientpose_dataset.py  run_all_covariance_experiments.sh  stream_rosbags.py
covariance_experiment/: covariance_experiment.py  remove_links.sh  rtabmap-db-covariance-modifier.py
label_msgs/: CMakeLists.txt  package.xml
label_msgs/msg/: ImageLabels.msg  ObjectLabel.msg
