<?xml version="1.0"?>
<package format="2">
  <name>label_msgs</name>
  <version>0.0.0</version>
  <description>The label_msgs package</description>

  <maintainer email="maciej.zurad@gmail.com">asiron</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_depend>message_generation</build_depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
